# NetRat

./: .gitignore  README.md  build.py  core.spec  pyproject.toml  requirements.txt
NetRat/: core.py  netprotocols.py  output.py  sniffer.py
NetRat/myenv/: pyvenv.cfg
data/raw/: youtube_20260714_040216.pcapng
packet sniffer/: core.py  output.py
scripts/: capture_pipeline.py
